--- a/PBMDemo/index.html
+++ b/PBMDemo/index.html
@@ -43,7 +43,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body onload="bookmarkLoader()">
     <div class="header">
         <div id="divlogo" class="responsiveLogo">
             <!-- <p>Demo Application</p> -->
