--- a/PBMDemo/index.html
+++ b/PBMDemo/index.html
@@ -85,7 +85,7 @@
         <div class="bookmarkPopup safari-content">
             <div class="popupContent"> <img src="assets/img/logout.png" class="popupClose" onclick="hideBookmark()" />
                 <div class="popupText">
-                    <p>Use this website as an App without installation. Click <img class="bookmarkSettingsImage" src="assets/img/safari-settings.png" /> below.</p>
+                    <p>Use this website as an App without installation. Click <img class="bookmarkSettingsImage" src="assets/img/safari-settings.png" /> below and select "Add to home screen" option.</p>
                 </div>
             </div>
         </div>
