--- a/PBMDemo/index.html
+++ b/PBMDemo/index.html
@@ -57,7 +57,7 @@
             <section>
                 <div class="panel panel-default top caja">
                     <div class="panel-body">
-                        <h3 class="test-center">Login</h3>
+                        <h3 style="text-align: center;">Login</h3>
                         <form>
                             <div class="input-group input-group-lg"> 
 							<span class="input-group-addon" id="sizing-addon1"><i class="fa fa-user" aria-hidden="true"></i></span>
